--- a/css/style.css
+++ b/css/style.css
@@ -7346,13 +7346,17 @@ p.product-item-price {
   transition: all 0.3s ease;
 }
 
-
-.select-configuration-card-img img {
+.select-configuration-card-img {
   max-width: 216px;
   max-height: 216px;
   width: 100%;
   height: 100%;
+}
+
+.select-configuration-card-img img {
   transition: all 0.05s ease;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
 
 .select-configuration-card.active .select-configuration-card-img img {
@@ -7437,8 +7441,11 @@ p.product-item-price {
     gap: 15px;
   }
 
-  .select-configuration-card-img img {
+  .select-configuration-card-img {
     max-width: 170px;
+    max-height: 170px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -7454,8 +7461,11 @@ p.product-item-price {
 }
 
 @media (max-width: 1450px) {
-  .select-configuration-card-img img {
+  .select-configuration-card-img {
     max-width: 118px;
+    max-height: 118px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -7474,8 +7484,11 @@ p.product-item-price {
     max-height: 1090px;
   }
 
-  .select-configuration-card-img img {
+  .select-configuration-card-img {
     max-width: 167px;
+    max-height: 167px;
+    width: 100%;
+    height: 100%;
   }
 }
 
