--- a/css/style.css
+++ b/css/style.css
@@ -7233,7 +7233,8 @@ p.product-item-price {
 }
 
 @media (max-width: 800px) {
-  .fixed-product-info-left-side {
+  .fixed-product-info-left-side,
+  .favorite-btn {
     display: none;
   }
 
@@ -7680,7 +7681,8 @@ p.product-desc-card-specification {
   }
 
   .product-desc-card-specification p,
-  .product-desc-card-info-text {
+  .product-desc-card-info-text,
+  .product-desc-card-specification a {
     font-size: 14px;
   }
 
@@ -7716,6 +7718,10 @@ p.product-desc-card-specification {
 
   .product-desc-card-info {
     transform: translateY(16px);
+  }
+
+  .product-desc-card-specification:first-child::after {
+    width: 100%;
   }
 }
 
@@ -10091,7 +10097,7 @@ p.cart-form-title {
   }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1250px) {
   .order-items-head { display: none; }
   
   .order-items {
@@ -10117,6 +10123,7 @@ p.cart-form-title {
   .order-item-status {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     margin: 0 0 12px;
     padding: 12px 0px;
     border-bottom: 1px solid #D0D0D0;
@@ -10124,6 +10131,7 @@ p.cart-form-title {
     color: #000;
     width: 100%;
   }
+
   .order-item-number::before { 
     content: "Номер";            
     color: #8C8C8C;
