Added product-out-of-stock page

--- a/css/style.css
+++ b/css/style.css
@@ -8412,6 +8412,11 @@ p.send-review-title {
   margin-bottom: 120px;
 }
 
+.related-products-cards a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .related-products-card {
   position: relative;
   overflow: hidden;
