--- a/css/style.css
+++ b/css/style.css
@@ -7991,6 +7991,7 @@ p.product-desc-card-review-author {
   max-height: 108px;
   width: 100%;
   height: 100%;
+  border-radius: 2px;
 }
 
 @media (max-width: 1350px) {
